[package]
name = "wasm-triangles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to run native #[test]s without compiler and linker errors
# we need rlib too.``
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.8"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.58"
features = [
    "console", 
    "Window", 
    "Document", 
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d", 
    "Element",
    ]

